SERVER-75790 Use `canAcceptWritesForDatabase` on ShardServerOpObserver